--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,11 @@ nav a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
-    transition: color 0.3s; /* Smooth transition for color change */
+    transition: color 0.3s; 
 }
 
 nav a:hover {
-    color: #ffcc00; /* Change the color to your desired hover color */
+    color: #ffcc00;
 }
 
 .main {
@@ -114,7 +114,7 @@ footer {
     background-color: #45a049;
 }
 
-/* Additional styles for responsiveness */
+
 @media (max-width: 600px) {
     .student-form {
         width: 80%;
